--- a/index.html
+++ b/index.html
@@ -36,6 +36,84 @@
   </div>
 </nav>
 
+<section class="hero">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered">
+        <div class="column has-text-centered">
+          <!-- <img src="./static/images/overview.svg" -->
+          <!-- alt="Splat-Nav Logo" /> -->
+          <h1 class="title is-1 publication-title"> Splatblox: Traversability-Aware Gaussian Splatting for Outdoor Robot Navigation  </h1>
+<!--          <div class="is-size-5 publication-authors">-->
+<!--            <span class="author-block">-->
+<!--              <a href="https://scholar.google.com/citations?user=Yc9_o-4AAAAJ&hl=en">Samarth Chopra</a>,</span>-->
+<!--             <span class="author-block">-->
+<!--              <a href="/everydayvla">Alex McMoil</a>,</span>-->
+<!--            <span class="author-block">-->
+<!--              <a href="/everydayvla">Ben Carnovale</a>,</span>-->
+<!--            <span class="author-block">-->
+<!--              <a href="/everydayvla">Evan Sokolson</a>,</span>-->
+<!--            <span class="author-block">-->
+<!--              <a href="https://www.engineering.pitt.edu/people/faculty/rajkumar-kubendran/">Rajkumar Kubendran</a>,</span>-->
+<!--            <span class="author-block">-->
+<!--            <a href="https://www.engineering.pitt.edu/people/faculty/samuel-dickerson/">Samuel Dickerson</a></span>-->
+<!--            </span>-->
+<!--          </div>-->
+
+<!--          <div class="is-size-5 publication-authors">-->
+<!--            <br/>-->
+<!--            <span class="author-block">University of Pittsburgh</span>-->
+<!--          </div>-->
+
+          <div class="column has-text-centered">
+            <div class="publication-links">
+              <!-- PDF Link. -->
+              <!-- <span class="link-block">
+                <a href="https://ieeexplore.ieee.org/document/10494911"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Paper</span>
+                </a>
+              </span> -->
+              <span class="link-block">
+                <a href="link to arxiv"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+              </span>
+              <!-- Code Link. -->
+              <span class="link-block">
+                <a href="/vla"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code (Coming Soon)</span>
+                  </a>
+              </span>
+              <!-- Dataset Link. -->
+              <span class="link-block">
+                <a href="/vla"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="far fa-images"></i>
+                  </span>
+                  <span>Data (Coming Soon)</span>
+                  </a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <body>
 <footer class="footer">
   <div class="container">
