--- a/index.html
+++ b/index.html
@@ -44,26 +44,30 @@
           <!-- <img src="./static/images/overview.svg" -->
           <!-- alt="Splat-Nav Logo" /> -->
           <h1 class="title is-1 publication-title"> Splatblox: Traversability-Aware Gaussian Splatting for Outdoor Robot Navigation  </h1>
-<!--          <div class="is-size-5 publication-authors">-->
-<!--            <span class="author-block">-->
-<!--              <a href="https://scholar.google.com/citations?user=Yc9_o-4AAAAJ&hl=en">Samarth Chopra</a>,</span>-->
-<!--             <span class="author-block">-->
-<!--              <a href="/everydayvla">Alex McMoil</a>,</span>-->
-<!--            <span class="author-block">-->
-<!--              <a href="/everydayvla">Ben Carnovale</a>,</span>-->
-<!--            <span class="author-block">-->
-<!--              <a href="/everydayvla">Evan Sokolson</a>,</span>-->
-<!--            <span class="author-block">-->
-<!--              <a href="https://www.engineering.pitt.edu/people/faculty/rajkumar-kubendran/">Rajkumar Kubendran</a>,</span>-->
-<!--            <span class="author-block">-->
-<!--            <a href="https://www.engineering.pitt.edu/people/faculty/samuel-dickerson/">Samuel Dickerson</a></span>-->
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">
+              <a href="https://scholar.google.com/citations?user=Yc9_o-4AAAAJ&hl=en">Samarth Chopra</a>,</span>
+             <span class="author-block">
+              <a href="/everydayvla">Jing Liang</a>,</span>
+            <span class="author-block">
+              <a href="/everydayvla">Gershom Seneviratne</a>,</span>
+            <span class="author-block">
+              <a href="/everydayvla">Yonghan Lee</a>,</span>
+            <span class="author-block">
+              <a href="/everydayvla">Jaehoon Choi</a>,</span>
+            <span class="author-block">
+            <a href="/everydayvla">Jianyu An</a></span>
+            <span class="author-block">
+            <a href="/everydayvla">Stephen Cheng</a></span>
+            <span class="author-block">
+            <a href="/everydayvla">Dinesh Manocha</a></span>
 <!--            </span>-->
-<!--          </div>-->
+          </div>
 
-<!--          <div class="is-size-5 publication-authors">-->
-<!--            <br/>-->
-<!--            <span class="author-block">University of Pittsburgh</span>-->
-<!--          </div>-->
+          <div class="is-size-5 publication-authors">
+            <br/>
+            <span class="author-block">University of Maryland, College Park</span>
+          </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
@@ -105,12 +109,57 @@
                   </span>
                   <span>Data (Coming Soon)</span>
                   </a>
+              </span>
             </div>
 
           </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
+
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body" style="align-items: center;">
+     <img src="./static/images/overview_compressed-1.png"
+              alt="Splatblox architecture."
+              style="width: 400px; display: block; margin: 0 auto;"
+     />
+      <p class="has-text-justified"></p>
+<!--      <span class="Splatblox">Splatblox</span>-->
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+             We present Splatblox, a real-time system for autonomous navigation in outdoor environments with dense
+              vegetation, irregular obstacles, and complex terrain. Our
+              method fuses segmented RGB images and LiDAR point clouds
+              using Gaussian Splatting to construct a traversability-aware
+              Euclidean Signed Distance Field (ESDF) that jointly encodes
+              geometry and semantics. Updated online, this field enables
+              semantic reasoning to distinguish traversable vegetation (e.g.,
+              tall grass) from rigid obstacles (e.g., trees), while LiDAR ensures
+              360° geometric coverage for extended planning horizons. We
+              validate Splatblox on a quadruped robot and demonstrate
+              transfer to a wheeled platform. In field trials across vegetation-rich scenarios,
+              it outperforms state-of-the-art methods with
+              over 50% higher success rate, 40% fewer freezing incidents,
+              5% shorter paths, and up to 13% faster time to goal, while
+              supporting long-range missions up to 100 m.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Abstract. -->
   </div>
 </section>
 
@@ -123,7 +172,7 @@
           <p>
             This website is licensed under a <a rel="license"
                                                 href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>. This webpage template is from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a> and inspiration is taken from OpenVLA.
+            Commons Attribution-ShareAlike 4.0 International License</a>. This webpage template is from <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>.
             We sincerely thank <a href="https://keunhong.com/">Keunhong Park</a> for developing and open-sourcing this template.
           </p>
         </div>
