fixed commas in author names

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <span class="author-block">
               <a href="/everydayvla">Jaehoon Choi</a>,</span>
             <span class="author-block">
-            <a href="/everydayvla">Jianyu An</a></span>
+            <a href="/everydayvla">Jianyu An</a>,</span>
             <span class="author-block">
-            <a href="/everydayvla">Stephen Cheng</a></span>
+            <a href="/everydayvla">Stephen Cheng</a>,</span>
             <span class="author-block">
-            <a href="/everydayvla">Dinesh Manocha</a></span>
+            <a href="/everydayvla">Dinesh Manocha</a>,</span>
 <!--            </span>-->
           </div>
 
@@ -124,7 +124,7 @@
     <div class="hero-body" style="align-items: center;">
      <img src="./static/images/overview_compressed-1.png"
               alt="Splatblox architecture."
-              style="width: 400px; display: block; margin: 0 auto;"
+              style="width: 700px; display: block; margin: 0 auto;"
      />
       <p class="has-text-justified"></p>
 <!--      <span class="Splatblox">Splatblox</span>-->
