fixed trailing comma in author names

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span class="author-block">
             <a href="/everydayvla">Stephen Cheng</a>,</span>
             <span class="author-block">
-            <a href="/everydayvla">Dinesh Manocha</a>,</span>
+            <a href="/everydayvla">Dinesh Manocha</a></span>
 <!--            </span>-->
           </div>
 
