--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <link rel="icon" href="./static/images/favicon.svg">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!--  <script defer src="./static/js/fontawesome.all.min.js"></script>-->
-<!--  <script src="./static/js/bulma-carousel.min.js"></script>-->
-<!--  <script src="./static/js/bulma-slider.min.js"></script>-->
-<!--  <script src="./static/js/index.js"></script>-->
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script src="./static/js/bulma-carousel.min.js"></script>
+  <script src="./static/js/bulma-slider.min.js"></script>
+  <script src="./static/js/index.js"></script>
 </head>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -65,7 +65,6 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <br/>
             <span class="author-block">University of Maryland, College Park</span>
           </div>
 
