added ICRA video

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="hero-body" style="align-items: center;">
      <img src="./static/images/overview_compressed-1.png"
               alt="Splatblox architecture."
-              style="width: 700px; display: block; margin: 0 auto;"
+              style="width: 400px; display: block; margin: 0 auto;"
      />
       <p class="has-text-justified"></p>
 <!--      <span class="Splatblox">Splatblox</span>-->
@@ -161,6 +161,12 @@
     <!--/ Abstract. -->
   </div>
 </section>
+
+<div class="video-container">
+  <video controls width="640">
+    <source src="./static/videos/Splatblox_ICRA_2026.mp4" type="video/mp4">
+  </video>
+</div>
 
 <body>
 <footer class="footer">
