centered ICRA video

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="hero-body" style="align-items: center;">
      <img src="./static/images/overview_compressed-1.png"
               alt="Splatblox architecture."
-              style="width: 400px; display: block; margin: 0 auto;"
+              style="width: 600px; display: block; margin: 0 auto;"
      />
       <p class="has-text-justified"></p>
 <!--      <span class="Splatblox">Splatblox</span>-->
@@ -162,11 +162,20 @@
   </div>
 </section>
 
-<div class="video-container">
-  <video controls width="640">
-    <source src="./static/videos/Splatblox_ICRA_2026.mp4" type="video/mp4">
-  </video>
-</div>
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <div class="video-container">
+          <video controls width="640">
+            <source src="./static/videos/Splatblox_ICRA_2026.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <body>
 <footer class="footer">
